--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,7 @@ include_directories(${GLEW_INCLUDE_DIRS})
 find_package(GLFW REQUIRED glfw3)
 include_directories(${GLFW_INCLUDE_DIRS})
 
-target_link_libraries(${EXECUTABLE_NAME} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} )
+find_package(SFML 2 REQUIRED system window graphics network audio)
+include_directories(${SFML_INCLUDE_DIR})
+
+target_link_libraries(${EXECUTABLE_NAME} ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${SFML_LIBRARIES})
